vproapp-on-k8sCluster/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regexp: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: vprofile.mahammadjabirsi.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vproapp-service
            port:
              number: 80
